@@ -12,7 +12,7 @@
 	  		<table class="layui-table">
 	  			<thead>
                     <tr>
-                    	<th>分组</th>
+                    	<th>分组(gid)</th>
                         <th>名称</th>
                         <th>链接</th>
                         <th>Logo</th>
