@@ -32,8 +32,10 @@ class ListController extends Controller
             if (! ! $sort = $this->model->getSort($scode)) {
                 if ($sort->listtpl) {
                     $content = parent::parser($sort->listtpl); // 框架标签解析
-                    $content = $this->parser->parserPosition($content, $sort->scode); // CMS当前位置标签解析
+                    $content = $this->parser->parserPositionLabel($content, $sort->scode); // CMS当前位置标签解析
                     $content = $this->parser->parserSortLabel($content, $sort); // CMS分类信息标签解析
+                    $content = $this->parser->parserSelectAllLabel($content); // CMS筛选全部标签解析
+                    $content = $this->parser->parserSelectLabel($content); // CMS筛选标签解析
                     $content = $this->parser->parserCurrenListLabel($content, $sort->scode); // CMS分类列表标签解析
                     $content = $this->parser->parserCommom($content); // CMS公共标签解析
                 } else {
