@@ -1,5 +1,7 @@
 ﻿Pboot框架更新日志：
-
+Pboot V1.3.3 2017-06-08
+	1.新增分页地址问号后page参数支持；
+	
 Pboot V1.3.2 2017-06-08
 	1.新增配置返回数组自动去除空格；
 	2.修复存在乱码时数据读取异常；
