@@ -1,8 +1,9 @@
-﻿PbootCMS V1.1.3 build 2018-06-13
+﻿PbootCMS V1.1.3 build 2018-06-14
 1、优化Sqlite查询过程高并发锁死问题；
 2、修复部分环境截取描述文本出现乱码问题；
 3、修复API搜索数据获取方式错误；
 4、新增API获取指定分类子类接口;
+5、新增多条件筛选功能；
 
 PbootCMS V1.1.2 build 2018-06-12
 1、修复httpurl非标准端口时解析错误；
